syntax = "proto3";

package Greeter;

service Greeter {
  rpc SayHello (GreeterRequest) returns (GreeterReply) {}
}

message GreeterRequest {
  string name = 1;
}

message GreeterReply {
  string message = 1;
}